using System;
using System.Collections.Generic;
using System.Text;

namespace LaererVikaren_Application.Model
{
    class Faktura
    {
    }
}
