@startuml

Vikariat "1..*" -- "1" Faktura
Vikar "1" -- "1..*" Booking
Vikariat "0..1" -- "1" Booking

class Booking{
dato
starttid
sluttid
fag
status
oprettetTid
}

class Vikariat{
dato
starttid
sluttid
status
}

class Vikar{
navn
tlf
email
ledighed
børneattestudløbsdato 
}

class Faktura{
fakturadato
samletbeløb
timepris
status
}


hide methods
hide circle
@enduml